--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,13 +5,13 @@
 .main {
   max-width: 800px;
   display: flex;
-  gap: var(--space-max);
+  flex-direction: column;
+  gap: 96px; /*tamaño unico*/
 }
 .hero {
   width: 100%;
-  margin-inline: var(--space-max);
-  margin-block: var(--space-max);
   margin-top: 96px; /*tamaño unico*/
+
   display: flex;
   flex-direction: column;
 }
@@ -24,11 +24,26 @@
   font-size: var(--size-max);
 }
 .hero__description {
-  margin-top: var(--space-max);
+  margin-top: var(--space-mid);
+  font-size: var(--size-min);
 }
-/* .main {
+.project {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-mid);
 }
-.footer {
+.project__title {
+  color: var(--black);
+  font-size: var(--font-max);
+}
+.project__card_container {
+  width: 100%;
+
+  display: flex;
+  gap: var(--space-mid);
+}
+
+/* .footer {
 } */
 /* Enable hover only on non-touch devices */
 /* @media (hover: hover) and (pointer: fine) {
