--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -1,14 +1,13 @@
-.button_container {
-  width: 100%;
-  padding-top: 10px;
-  border-top: 0.5px solid var(--black-op);
-}
 .button {
-  width: fit-content;
+  margin-top: var(--space-min);
   padding: 8px 16px;
+  width: fit-content;
 
   display: flex;
-  border-radius: 8px;
+  align-items: center;
+  gap: var(--space-min);
+
+  border-radius: 2px;
   border: none;
   background-color: var(--black-op);
   color: var(--white);
