--- a/src/components/project_card/project_card.module.css
+++ b/src/components/project_card/project_card.module.css
@@ -1,6 +1,3 @@
-:root {
-  --width-video: ;
-}
 .card {
   width: 50%;
 
@@ -37,5 +34,14 @@
   gap: var(--space-mid);
 }
 .card__techo_item {
-  font-size: 12px;
+  font-size: var(--size-xmin);
+}
+/* media queris */
+@media (max-width: 600px) {
+  .card {
+    width: 100%;
+  }
+  .contact__btns_container {
+    gap: var(--space-min);
+  }
 }
