--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,10 @@
 :root {
   /* colors */
   --white: #ffffff;
-  --black: #171717;
-  --black-op: rgba(23, 23, 23, 0.6);
+  --black: #000000;
+  --black-op-text: rgba(0, 0, 0, 0.4);
+  --black-op-line: rgba(0, 0, 0, 0.2);
+
   /* spaces */
   --space-max: 48px;
   --space-mid: 24px;
@@ -17,10 +19,10 @@
   --weight-bold: 500;
 }
 body {
-  color: var(--black-op);
+  color: var(--black-op-text);
   background: var(--white);
   font-size: var(--size-mid);
-  letter-spacing: -1;
+  letter-spacing: -1px;
 }
 * {
   box-sizing: border-box;
