--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,7 +5,7 @@
   gap: 96px; /*tamaño unico*/
 }
 .main {
-  margin-inline: 20px;
+  margin-inline: 16px;
   max-width: 800px;
   display: flex;
   flex-direction: column;
@@ -46,7 +46,7 @@
 .studies__title,
 .contact__title {
   color: var(--black);
-  font-size: var(--font-max);
+  font-size: var(--size-max);
 }
 .project__card_container {
   width: 100%;
@@ -64,14 +64,6 @@
   flex-direction: column;
   gap: var(--space-mid);
 }
-.studies__resume_container {
-  display: flex;
-  flex-direction: column;
-  gap: var(--space-min);
-}
-.studies__resume_p {
-  font-size: var(--size-min);
-}
 /* contact */
 .contact__container {
   display: flex;
@@ -81,11 +73,24 @@
 .contact__p {
   font-size: var(--size-min);
 }
+.contact__p a {
+  color: var(--black);
+  font-weight: var(--weight-bold);
+  cursor: pointer;
+}
 .contact__btns_container {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   gap: var(--space-mid);
+}
+.contact__resume_container {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-min);
+}
+.contact__resume_p {
+  font-size: var(--size-min);
 }
 /* footer */
 .footer {
@@ -97,7 +102,7 @@
   align-items: center;
   justify-content: space-between;
 
-  border-top: 0.5px solid var(--black-op);
+  border-top: 0.5px solid var(--black-op-line);
 }
 .footer span {
   font-size: var(--size-xmin);
@@ -112,6 +117,6 @@
     gap: var(--space-min);
   }
   .footer {
-    padding-inline: 20px;
+    padding-inline: 16px;
   }
 }
