--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -1,6 +1,6 @@
 .button {
   margin-top: var(--space-min);
-  padding: 8px 16px;
+  padding: 4px 8px;
   width: fit-content;
 
   display: flex;
@@ -9,8 +9,9 @@
 
   border-radius: 2px;
   border: none;
-  background-color: var(--black-op);
+  background-color: var(--black-op-line);
   color: var(--white);
+  font-size: var(--size-xmin);
 
   cursor: pointer;
   transition: ease 0.3s;
