--- a/src/components/project_card/project_card.module.css
+++ b/src/components/project_card/project_card.module.css
@@ -8,11 +8,12 @@
 .card__video_container {
   width: 100%;
   height: 200px;
-  border: 0.5px solid var(--black-op);
+  border: 0.5px solid var(--black-op-line);
   border-radius: 8px;
 }
 .card__body_title {
   color: var(--black);
+  font-size: var(--size-mid);
 }
 .card__body_container {
   display: flex;
@@ -25,7 +26,7 @@
   display: flex;
 
   font-size: var(--size-min);
-  border-bottom: 0.5px solid var(--black-op);
+  border-bottom: 0.5px solid var(--black-op-line);
 }
 .card__tech_contaienr {
   display: flex;
