Refactored code into components and added motion.

--- a/src/components/project_card/project_card.module.css
+++ b/src/components/project_card/project_card.module.css
@@ -50,7 +50,7 @@
   gap: var(--space-mid);
 }
 .card__techo_item {
-  font-size: var(--size-xmin);
+  font-size: var(--size-xmin) !important;
 }
 /* media queris */
 @media (max-width: 640px) {
