Refactor project data and update project card component:
- Updated project details for "Unimarket" to "Unexo" with new description and links.
- Enhanced project card to display separate frontend and backend code links.

--- a/src/components/project_card/project_card.module.css
+++ b/src/components/project_card/project_card.module.css
@@ -46,6 +46,10 @@
 .card__techo_item {
   font-size: var(--size-xmin) !important;
 }
+.card__body_codeLinks_container {
+  display: flex;
+  gap: var(--space-min);
+}
 /* media queris */
 @media (max-width: 640px) {
   .card {
